Use StringUtils from Apache Commons for checking for null and empty strings